<resources>
    <string name="splash_title">LeagueStats</string>
    <string name="image_logo_text">Image logo text</string>
    <string name="main_title">League of Legends</string>
    <string name="server_hint">Server</string>
    <string name="summoner_name_hint">Summoner name</string>
    <string name="main_screen_subtitle" formatted="false">To see recent games statistics, enter summoner name.\nServer: %s</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_champ_data">Champion stats</string>
    <string name="bottom_navigation_ladder">Ladder</string>
    <string name="main_header_image">Header image</string>
    <string name="server_dialog_title">Select server</string>
    <string name="search_for_summoner">Search for summoner</string>
    <string name="summoner_search_failed_not_found">Summoner not found</string>
    <string name="summoner_search_failed_general">Search failed. Please check your internet connection</string>
    <string name="summoner_level" formatted="false">Level: %d</string>
    <string name="general_ok">OK</string>
    <string name="ranked_solo">Ranked Solo</string>
    <string name="flex_5v5">Flex 5v5</string>
    <string name="ranked_3v3">Flex 3v3</string>
    <string name="tier_placeholder" formatted="false">%s %s</string>
    <string name="league_points_placeholder" formatted="false">%dLP</string>
    <string name="wins_losses_placeholder" formatted="false">%dW %dL</string>
    <string name="win_ratio_placeholder" formatted="false">%.2f%%</string>
    <string name="wins_losses_default">- wins / - losses</string>
    <string name="win_ratio_default">Win ratio:</string>
    <string name="no_data_placeholder">-</string>
    <string name="ranks_title">Ranks</string>
    <string name="matches_title">Matches</string>

    <string name="server_br">Brazil</string>
    <string name="server_eune">EU Nordic &amp; East</string>
    <string name="server_euw">EU West</string>
    <string name="server_na">North America</string>
    <string name="server_las">Latin America South</string>
    <string name="server_lan">Latin America North</string>
    <string name="server_oce">Oceania</string>
    <string name="server_ru">Russia</string>
    <string name="server_tr">Turkey</string>
    <string name="server_jp">Japan</string>
    <string name="server_kr">Korea</string>
    <string name="summoner_icon">Summoner icon</string>
    <string name="rank_icon">Rank icon</string>
    <string name="unranked">Unranked</string>

    <string name="custom_queue_name">Custom</string>
    <string name="normal_3v3_queue_name">Normal 3v3</string>
    <string name="normal_5v5_blind_queue_name">Normal blind 5v5</string>
    <string name="normal_5v5_draft_queue_name">Normal draft 5v5</string>
    <string name="ranked_5v5_solo_queue_name">Ranked solo 5v5</string>
    <string name="ranked_5v5_premade_queue_name">Ranked premade 5v5</string>
    <string name="ranked_3v3_premade_queue_name">Ranked premade 3v3</string>
    <string name="ranked_3v3_team_queue_name">Ranked team 3v3</string>
    <string name="dominion_blind_queue_name">Dominion blind</string>
    <string name="dominion_draft_queue_name">Dominion draft</string>
    <string name="coop_vs_ai_queue_name">Coop vs AI</string>
    <string name="dominion_coop_vs_ai_queue_name">Dominion coop vs AI</string>
    <string name="coop_vs_ai_intro_queue_name">Intro coop vs AI</string>
    <string name="coop_vs_ai_beginner_queue_name">Beginner coop vs AI</string>
    <string name="coop_vs_ai_intermediate_queue_name">Intermediate coop vs AI</string>
    <string name="coop_vs_ai_twisted_treeline_queue_name">Twisted treeline coop vs AI</string>
    <string name="team_builder_queue_name">Team builder</string>
    <string name="aram_queue_name">ARAM</string>
    <string name="one_for_all_queue_name">One for all</string>
    <string name="snowdown_showdown_1v1_queue_name">Snowdown showdown 1v1</string>
    <string name="snowdown_showdown_2v2_queue_name">Snowdown showdown 2v2</string>
    <string name="hexakill_queue_name">Hexakill</string>
    <string name="urf_queue_name">URF</string>
    <string name="one_for_all_mirror_queue_name">One for all mirror mode</string>
    <string name="urf_ai_queue_name">URF AI</string>
    <string name="doom_bots_rank_1_queue_name">Doom bots rank 1</string>
    <string name="doom_bots_rank_2_queue_name">Doom bots rank 2</string>
    <string name="doom_bots_rank_3_queue_name">Doom bots rank 3</string>
    <string name="ascension_queue_name">Ascension</string>
    <string name="hexakill_twisted_treeline_queue_name">Hexakill Twisted Treeline</string>
    <string name="butchers_bridge_queue_name">Butcher\'s Bridge</string>
    <string name="king_poro_queue_name">King Poro</string>
    <string name="black_market_brawlers_queue_name">Black Market Brawlers</string>
    <string name="nexus_siege_brawlers_queue_name">Nexus Siege</string>
    <string name="definitely_not_dominion_brawlers_queue_name">Definitely Not Dominion</string>
    <string name="ar_urf_queue_name">All Random URF</string>
    <string name="ar_rift_queue_name">All Random Summoner\'s Rift</string>
    <string name="ranked_5v5_draft_queue_name">Ranked 5v5</string>
    <string name="ranked_5v5_solo_draft_queue_name">Ranked solo</string>
    <string name="ranked_5v5_blind_draft_queue_name">Ranked 5v5 blind</string>
    <string name="ranked_flex_draft_queue_name">Ranked flex</string>
    <string name="blood_hunt_assassin_draft_queue_name">Blood Hunt Assassin</string>
    <string name="dark_star_queue_name">Dark Star</string>
    <string name="unknown">Unknown</string>
</resources>
