<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_header_image"
            android:src="@drawable/ic_ezreal" />

    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            app:layout_heightPercent="50%">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/search">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/summoner_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/summoner_name_hint"
                    android:textColorHint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/search_button"
                android:contentDescription="@string/search_for_summoner"
                android:elevation="5dp"
                android:src="@drawable/search_animation" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/search_container"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_heightPercent="50%">

            <TextView
                android:id="@+id/hint"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/main_screen_hint_background"
                android:elevation="5dp"
                android:padding="16dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>

</LinearLayout>
